tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/set_authority_header/tproxy/to_b/_test_context/VirtualService.1308778792.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          :authority: my-custom-authority
    route:
    - destination:
        host: b
